--- a/style.css
+++ b/style.css
@@ -117,6 +117,10 @@ html { scroll-behavior: smooth; overflow-y: scroll; overflow-x:hidden; }
                -moz-background-clip: padding;
                background-clip: padding-box;
               }
+              #sticky-footer {
+               
+               height: 8vh;
+             }
  @media only screen and (max-width : 991px){
     [class*="divIcon"]{
       display: flex;
@@ -135,4 +139,43 @@ html { scroll-behavior: smooth; overflow-y: scroll; overflow-x:hidden; }
     flex-direction: column;
     width: 100%;
  }
+
  
+ 
+ footer.footer {
+   padding-top: 5rem;
+   padding-bottom: 5rem;
+ }
+ 
+ footer.footer .social-link {
+   display: block;
+   height: 4rem;
+   width: 4rem;
+   line-height: 4.3rem;
+   font-size: 1.5rem;
+   background-color: #1D809F;
+   transition: background-color 0.15s ease-in-out;
+   box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
+ }
+ 
+ footer.footer .social-link:hover {
+   background-color: #155d74;
+   text-decoration: none;
+ }
+ 
+ @media (max-width: 992px) {
+   footer.footer {
+      padding-top: 2.5rem;
+      padding-bottom: 2.5rem;
+    }
+   footer.footer .social-link {
+      display: block;
+      height: 2rem;
+      width: 2rem;
+      line-height: 2.3rem;
+      font-size: 1rem;
+      background-color: #1D809F;
+      transition: background-color 0.15s ease-in-out;
+      box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
+    }
+ }
