--- a/style.css
+++ b/style.css
@@ -23,7 +23,9 @@ html { scroll-behavior: smooth; overflow-y: scroll; overflow-x:hidden; }
     margin: auto;
  }
  .intro{
-   background-color: #000;
+
+  background-image: url('\img/intro-bg4.jpg');
+  background-size:100vw 100vh;
 }
 .flex {
     display: flex;
@@ -33,8 +35,9 @@ html { scroll-behavior: smooth; overflow-y: scroll; overflow-x:hidden; }
 }
 #pt{
    width: 100%;
-   height: 110vh;
-}
+   height: 100vh;
+
+   }
 .canvas {
    position: absolute;
    top: 0;
@@ -42,6 +45,12 @@ html { scroll-behavior: smooth; overflow-y: scroll; overflow-x:hidden; }
    width: 100vw;
    height: 100%;
    }
+   .button{
+     background-color:#17a2b8 ;
+     color:#fff ;
+    
+  }
+
    .flex {
       display: flex;
       flex-direction: column;
@@ -52,7 +61,13 @@ html { scroll-behavior: smooth; overflow-y: scroll; overflow-x:hidden; }
       .flex.wrap {
         flex-wrap: wrap; }
         .highlight {
-         color: #E31B6D; }
+          font-size: 7vmin;
+          background: -webkit-linear-gradient(#eb3349, #ffb88c);
+          /* -webkit-text-stroke-width: .1vmin;
+          -webkit-text-stroke-color: #fff; */
+          background-clip: text;
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent; }
          
          section {
             padding: 70px 0 70px 0;
@@ -62,7 +77,7 @@ html { scroll-behavior: smooth; overflow-y: scroll; overflow-x:hidden; }
             section:nth-of-type(1) {
                padding: 0 10px;
                color: #fff;
-               height: calc(100vh + 53px); }
+               height: calc(92vh ); }
                section:nth-of-type(1) .highlight {
                  font-family: 'Raleway-semibold'; }
                section:nth-of-type(1) .text {
@@ -178,7 +193,22 @@ html { scroll-behavior: smooth; overflow-y: scroll; overflow-x:hidden; }
       transition: background-color 0.15s ease-in-out;
       box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
     }
- }
+    .intro{
+      background-image: url('\img/intro-bg-mbl.jpg');
+    }
+    .introtext
+    {
+      font-size: 4vmin;
+    }
+        .highlight {
+          font-size: 6vmin;
+          font-weight: bold;
+          background: -webkit-linear-gradient(#eb3349, #ffb88c);
+          background-clip: text;
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent; }
+         }
+         
  .neon-wrapper {
   height: 2em;
   display: flex;
@@ -189,7 +219,7 @@ html { scroll-behavior: smooth; overflow-y: scroll; overflow-x:hidden; }
 .txt {
   color: #ffffff;
   background:#000000;
-  font-size:1.5em;
+  font-size:1.2em;
   font-weight: bold;
   font-family: Arial;
   text-transform: uppercase;
@@ -229,3 +259,4 @@ html { scroll-behavior: smooth; overflow-y: scroll; overflow-x:hidden; }
       transform: translate(50%,50%);
   }
 }
+
