--- a/contact.css
+++ b/contact.css
@@ -1,3 +1,81 @@
+html { scroll-behavior: smooth; overflow-y: scroll; overflow-x:hidden; }
+.cont-bg {
+    background: linear-gradient(to left, #FF00C7 0%,#00c7ff 100%);
+
+    height: 125vh;
+    width: 100vw;
+}
 .error{
     color:red;
+}
+
+
+#contactbox {
+    
+	width: 50vw;
+	border-radius: 0px;
+    margin-left:25vw;
+    margin-top: 5vh;
+	position: absolute;
+	border-top: 4px solid tomato;
+	background: #1E202B;
+
+}
+
+
+
+form {
+
+  background: #1E202B;
+	border-radius: 2vmin;
+	position: relative;
+	top: 15vh;
+
+	border: none;
+	outline: none;
+	font-family: 'Roboto';
+
+	font-size: 1em;
+	padding: 10px;
+	padding-right: 50px;
+	box-sizing: border-box;
+	color: #ccc;
+}
+
+
+
+#logo {
+	position: absolute;
+	top: 5vh;
+
+	left: 2vmin;
+	
+}
+
+#logo p {
+	font-family: 'Roboto';
+	text-transform: uppercase;
+	font-weight: 900;
+	color: #fff;
+	font-size: 35px;
+	margin: 0;
+}
+
+
+#logo p span {
+	font-weight: 100;
+	font-style: italic;
+}
+
+@media (max-width: 992px) {
+    html { scroll-behavior: smooth; overflow-y: scroll; overflow-x:hidden; }
+    #contactbox {
+        width: 90vw;
+        border-radius: 0px;
+        margin:5vmin;
+        position: absolute;
+        border-top: 4px solid tomato;
+        background: #1E202B;
+    
+    }
 }
