--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ p{hyphens:auto}
         flex-wrap: wrap; }
         .highlight {
           font-size: 7vmin;
-          background: -webkit-linear-gradient(#eb3349, #ffb88c);
+          background: linear-gradient(to left, #FF00C7 0%,#00c7ff 100%);
           /* -webkit-text-stroke-width: .1vmin;
           -webkit-text-stroke-color: #fff; */
           background-clip: text;
