--- a/gallery-grid.css
+++ b/gallery-grid.css
@@ -2,7 +2,6 @@ body {
     background-image: linear-gradient(to top, #ecedee 0%, #eceeef 75%, #e7e8e9 100%);
     min-height: 100vh;
     font: normal 16px sans-serif;
-
 }
 
 .container.gallery-container {
@@ -36,13 +35,12 @@ body {
     width: 100%;
     margin-bottom: 30px;
     transition: 0.2s ease-in-out;
-    box-shadow: 0 2px 3px rgba(0,0,0,0.2);
+    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
 }
-
 
 .tz-gallery .lightbox img:hover {
     transform: scale(1.05);
-    box-shadow: 0 8px 15px rgba(0,0,0,0.3);
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
 }
 
 .tz-gallery img {
@@ -53,12 +51,10 @@ body {
     background-color: transparent !important;
 }
 
-
 @media(max-width: 768px) {
     body {
         padding: 0;
     }
-
     .container.gallery-container {
         border-radius: 0;
     }
