Added my works gallery portfolio page and made some changes in about page

--- a/gallery-grid.css
+++ b/gallery-grid.css
@@ -1,8 +1,8 @@
-body {
+/* body {
     background-image: linear-gradient(to top, #ecedee 0%, #eceeef 75%, #e7e8e9 100%);
     min-height: 100vh;
     font: normal 16px sans-serif;
-}
+} */
 
 .container.gallery-container {
     background-color: #fff;
@@ -33,7 +33,7 @@ body {
 
 .tz-gallery .lightbox img {
     width: 100%;
-    margin-bottom: 30px;
+    margin-bottom: 5vh;
     transition: 0.2s ease-in-out;
     box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
 }
@@ -58,4 +58,12 @@ body {
     .container.gallery-container {
         border-radius: 0;
     }
+}
+
+.row .gallery_img {
+    display: inline-block;
+    width: 300px;
+    height: auto;
+    text-align: center;
+    vertical-align: center;
 }
