--- a/about.css
+++ b/about.css
@@ -1,52 +1,74 @@
-
-#picDiv{
+#picDiv {
     width: 10vw;
     float: left;
     margin: 5vmin;
     margin-left: 6vmin;
-    position: relative;    
+    position: relative;
 }
-#aboutContact{
+
+#aboutContact {
     margin: 5vmin;
     float: right;
     padding-right: 2vmin;
 }
-#cont1{
-height: 25vh;
+
+#cont1 {
+    height: 25vh;
 }
-#ResumeContainer1{
+
+#ResumeContainer1 {
     background-color: #1A535C;
     padding: 2vmin;
 }
-#ResumeContainer2{
+
+#ResumeContainer2 {
     background-color: #4ECDC4;
     padding: 2vmin;
-}#ResumeContainer3{
-    background-color: #F7FFF7;
+}
+
+#ResumeContainer3 {
+    background-color: #ccf8cc;
     padding: 2vmin;
-}#ResumeContainer4{
+}
+
+#ResumeContainer4 {
     background-color: #FF6B6B;
     padding: 2vmin;
-}#ResumeContainer5{
+}
+
+#ResumeContainer5 {
     background-color: #FFE66D;
     padding: 2vmin;
-}#ResumeContainer6{
+}
+
+#ResumeContainer6 {
     background-color: #1A535C;
     padding: 2vmin;
 }
-#ResumeContainer6 h6,#ResumeContainer6 h5{
+
+#ResumeContainer6 h6,
+#ResumeContainer6 h5 {
     color: white;
 }
-.progress{
+
+.progress {
     margin: 2vmin 0 2vmin 0;
 }
 
-#picDiv img{
+#picDiv img {
     width: 10vmax;
 }
- @media only screen and (max-width: 768px) {
+
+@media only screen and (max-width: 768px) {
     #cont1 {
         height: 17vh;
     }
-    
+}
+
+.skilltcol {
+    font-weight: bolder;
+}
+
+.skilltcol td {
+    padding-right: 8vw;
 }
