--- a/portfolio.css
+++ b/portfolio.css
@@ -7,14 +7,24 @@
 
 .workslider .tile-wrapper .tile {
     display: inline-block;
-    background-image: linear-gradient(to top, #ecedee 0%, #eceeef 75%, #e7e8e9 100%);
+    border: 2px solid rgba(128, 128, 128, 0.123);
     width: 300px;
-    height: 340px;
+    height: 440px;
     margin: 0px 10px;
     border-radius: 10px;
+    padding: 5px;
     box-shadow: 1rem 1rem 1rem -1rem darkgray;
 }
 
+ .workslider .tile-wrapper .tile:hover{
+    border: 2px solid rgb(27, 167, 223);
+}
+
+.workslider .tile-wrapper .tile .slider-img {
+    width: 100%;
+    height: 250px;
+    padding: .5em;
+}
 .workslider .next {
     position: absolute;
     top: 50%;
@@ -33,12 +43,7 @@
     cursor: pointer;
 }
 
-.workslider .tile-wrapper .tile .slider-img {
-    width: 100%;
-    height: 250px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-}
+
 
 .workslider .tile-wrapper .tile .post-info {
     color: black;
