--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ section {
 section:nth-of-type(1) {
     padding: 0 10px;
     color: #fff;
-    height: calc(92vh);
+    height: calc(100vh - 70px);
 }
 
 section:nth-of-type(1) .highlight {
